[package]
name = "rustscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
indicatif = "0.17"
regex = "1.10"
socket2 = { version = "0.5", features = ["all"] }